@@ -1,0 +1,141 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ *
+ * Copyright (c) 2009-2015 Oracle and/or its affiliates. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License.  You can
+ * obtain a copy of the License at
+ * https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html
+ * or packager/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at packager/legal/LICENSE.txt.
+ *
+ * GPL Classpath Exception:
+ * Oracle designates this particular file as subject to the "Classpath"
+ * exception as provided by Oracle in the GPL Version 2 section of the License
+ * file that accompanied this code.
+ *
+ * Modifications:
+ * If applicable, add the following below the License Header, with the fields
+ * enclosed by brackets [] replaced by your own identifying information:
+ * "Portions Copyright [year] [name of copyright owner]"
+ *
+ * Contributor(s):
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+
+package com.sun.mail.imap;
+
+import java.io.IOException;
+import java.util.Properties;
+
+import javax.mail.Folder;
+import javax.mail.Session;
+import javax.mail.Store;
+import javax.mail.Message;
+import javax.mail.Flags;
+import javax.mail.search.FlagTerm;
+
+import com.sun.mail.test.TestServer;
+
+import org.junit.Test;
+import org.junit.Rule;
+import org.junit.rules.Timeout;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.fail;
+
+/**
+ * Test FETCH and SEARCH responses with a message number that's out of range.
+ */
+public final class IMAPMessageNumberOutOfRangeTest {
+
+    // timeout the test in case of deadlock
+    @Rule
+    public Timeout deadlockTimeout = new Timeout(20000);
+
+    @Test
+    public void test() {
+        TestServer server = null;
+        try {
+            final IMAPHandlerBad handler = new IMAPHandlerBad();
+            server = new TestServer(handler);
+            server.start();
+
+            final Properties properties = new Properties();
+            properties.setProperty("mail.imap.host", "localhost");
+            properties.setProperty("mail.imap.port", "" + server.getPort());
+            final Session session = Session.getInstance(properties);
+            //session.setDebug(true);
+
+            final Store store = session.getStore("imap");
+	    Folder folder = null;
+            try {
+                store.connect("test", "test");
+                folder = store.getFolder("INBOX");
+                folder.open(Folder.READ_ONLY);
+		Message msg = folder.getMessage(1);
+		Flags f = msg.getFlags();
+		Message[] msgs = folder.search(
+			    new FlagTerm(new Flags(Flags.Flag.RECENT), true));
+		assertEquals(1, msgs.length);
+		assertEquals(msg, msgs[0]);
+	    } catch (Exception ex) {
+		System.out.println(ex);
+		//ex.printStackTrace();
+		fail(ex.toString());
+            } finally {
+		if (folder != null)
+		    folder.close(false);
+                store.close();
+            }
+        } catch (final Exception e) {
+            e.printStackTrace();
+            fail(e.getMessage());
+        } finally {
+            if (server != null) {
+                server.quit();
+            }
+        }
+    }
+
+    /**
+     * Custom handler.  Returns responses for messages that don't
+     * exist in the folder.
+     */
+    private static final class IMAPHandlerBad extends IMAPHandler {
+
+	@Override
+        public void examine() throws IOException {
+	    numberOfMessages = 1;
+	    numberOfRecentMessages = 1;
+	    super.examine();
+	}
+
+	@Override
+        public void search(String line) throws IOException {
+            untagged("SEARCH 1 2");
+	    ok();
+        }
+
+	@Override
+        public void fetch(String line) throws IOException {
+            untagged("1 FETCH (FLAGS (\\Recent))");
+            untagged("2 FETCH (FLAGS (\\Deleted))");
+	    ok();
+        }
+    }
+}
