@@ -36,6 +36,7 @@ K  6687	long parameter values should be split using RFC 2231
 K  6703	javax.mail.Authenticator thread safety
 K  6718	Modify MailHandler to support Google App Engine.
 K  6755	EXPUNGE response during UID FETCH breaks UID->seqnum mapping
+K  6762	ArrayIndexOutOfBoundsException caused by out-of-range IMAP responses
 
 
 		  CHANGES IN THE 1.5.2 RELEASE
